--- a/style.css
+++ b/style.css
@@ -317,16 +317,13 @@ section .title::after{
     top: 0;
     background: crimson;
 }
-.skills-content .right .html::before{
+.skills-content .right .Java::before{
     width: 90%;
 }
-.skills-content .right .css::before{
-    width: 80%;
-}
 .skills-content .right .js::before{
-    width: 80%;
+    width: 90%;
 }
-.skills-content .right .Java::before{
+.skills-content .right .react::before{
     width: 90%;
 }
 .skills-content .right .sql::before{
@@ -338,9 +335,22 @@ section .title::after{
 .skills-content .right .algorithms::before{
     width: 75%;
 }
-.skills-content .right .GIT::before{
+.skills-content .right .tailwind::before{
     width: 90%;
 }
+.skills-content .right .html::before{
+    width: 90%;
+}
+.skills-content .right .css::before{
+    width: 90%;
+}
+.skills-content .right .GIT::before{
+    width: 80%;
+}
+
+
+
+
 
 /* contact section styling */
 .contact .title::after{
