--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ section .title::after{
 
 /* skills section styling */
 
-.skills .title::after{
+/* .skills .title::after{
     content: "what i know";
 }
 .skills .skills-content .column{
@@ -398,10 +398,37 @@ section .title::after{
 }
 .skills-content .right .GIT::before{
     width: 80%;
+} */
+
+
+.skills {
+    padding: 60px 20px;
+    background-color: #f1f1f1;
 }
 
+.skills h2 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 2.5em;
+    color: #333;
+}
 
+.skills-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
 
+.skill img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+}
+
+.skill {
+    text-align: center;
+}
 
 
 /* contact section styling */
